--- a/phone.css
+++ b/phone.css
@@ -39,3 +39,26 @@
 #send{
     width: 20%;
 }
+/* footer */
+.footerBackground{
+    background-color: black;
+}
+footer{
+    background: rgb(0, 91, 143);
+}
+a:link{
+    color: #fff;
+    text-decoration: none;
+}
+a:visited{
+    color: #fff;
+    text-decoration: none;
+}
+a:hover{
+    color: #fff;
+    text-decoration: none;
+}
+a:active{
+    color: #fff;
+    text-decoration: none;
+}
