--- a/style.css
+++ b/style.css
@@ -1,250 +1,238 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 /* NavBar */
-.navbar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(0, 0, 0, 0.5);
-    position: sticky;
-    top: 0;
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 0, 0, 0.5);
+  position: sticky;
+  top: 0;
 }
-.navbar ul{
-    display: flex;
-    list-style: none;
-    margin: 20px 0px;
+.navbar ul {
+  display: flex;
+  list-style: none;
+  margin: 20px 0px;
 }
-.navbar ul li{
-    font-family: century;
-    font-size: 1.1rem;
-    font-weight: bold;
+.navbar ul li {
+  font-family: century;
+  font-size: 1.1rem;
+  font-weight: bold;
 }
-.navbar ul li a{
-    text-decoration: none;
-    color: white;
-    padding: 8px 25px;
-    transition: all .5s ease;
-    
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  padding: 8px 25px;
+  transition: all 0.5s ease;
 }
-.navbar ul li a:hover{
-    background-color: white;
-    color: black;
-    box-shadow: 0 0 10px white;
-
+.navbar ul li a:hover {
+  background-color: white;
+  color: black;
+  box-shadow: 0 0 10px white;
 }
 /* Home Section */
-#home{
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 840px;
-    justify-content: center;
-    align-items: center;
-    color: white;
-
+#home {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 840px;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
-#home::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    background: url('IMG_9818.PNG') no-repeat center center/cover;
-    height: 900px;
-    width: 100%;
-    z-index: -1;
-    opacity: .8;
+#home::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: url("IMG_9818.PNG") no-repeat center center/cover;
+  height: 900px;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.8;
 }
-.main{
-    display: flex;
-    flex-direction: column;
-    /* border: 1px solid white; */
-    align-items: center;
-    position: absolute;
-    top: 30%;
-    right: 10%;
+.main {
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid white; */
+  align-items: center;
+  position: absolute;
+  top: 30%;
+  right: 10%;
 }
-.headings{
-    font-family:serif;
-    text-align: center;
-    margin: 40px 0px;
-
+.headings {
+  font-family: serif;
+  text-align: center;
+  margin: 40px 0px;
 }
-.btn{
-    padding: 10px 35px;
-    background: transparent;
-    border: 1px solid white;
-    color: white;
-    outline: none;
-    transition: .6 ease;
+.btn {
+  padding: 10px 35px;
+  background: transparent;
+  border: 1px solid white;
+  color: white;
+  outline: none;
+  transition: 0.6 ease;
 }
-.btn:hover{
-    cursor: pointer;
-    background-color: white;
-    color: black;
-    box-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white;
-    font-weight: bold; 
-    
-
+.btn:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  box-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white;
+  font-weight: bold;
 }
 /* About Section */
-#about{
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    padding: 20px;
-    margin-bottom: 50px;
+#about {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 20px;
+  margin-bottom: 50px;
 }
-#pic{
-    display: flex;
+#pic {
+  display: flex;
 }
-#pic img{
-    width: 125%;
-    height: 25rem;
-    border-radius: 50%;
-    margin-right: 2rem;
-    margin-top: auto;
+#pic img {
+  width: 125%;
+  height: 25rem;
+  border-radius: 50%;
+  margin-right: 2rem;
+  margin-top: auto;
 }
-#intro{
-    display: flex;
-    flex-direction: column;
-    text-align: justify;
-    padding: 10px;
-
+#intro {
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  padding: 10px;
 }
-#intro h2{
-    font-size: 2rem;
-    margin-bottom: 20px;
-    font-family:monospace;
-
+#intro h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  font-family: monospace;
 }
-#intro h3{
-    font-size: medium;
-    font-family:cursive;
+#intro h3 {
+  font-size: medium;
+  font-family: cursive;
 }
 /* Protfolio Section */
-#protfolio{
-    display: flex;
-    flex-direction: column;
-    color: black;
-    align-items: center;
-    font-family: century;
-    padding: 20px;
+#protfolio {
+  display: flex;
+  flex-direction: column;
+  color: black;
+  align-items: center;
+  font-family: century;
+  padding: 20px;
 }
-.projects{
-    color: black;
-    text-align: center;
-    font-family: century;
-    padding: 20px;
+.projects {
+  color: black;
+  text-align: center;
+  font-family: century;
+  padding: 20px;
 }
-.gallery{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    box-sizing: border-box;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  box-sizing: border-box;
+  margin-top: 50px;
 }
-.gallery img{
-     width: 200px;
-     height: 200px;
-     margin: 30px;
+.gallery img {
+  width: 250px;
+  height: 190px;
+  margin: 30px;
 }
 /* Services Section */
 #servicse {
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    /* margin: 10px; */
-
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  /* margin: 10px; */
 }
-.projects{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    box-sizing: border-box;
+.projects {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  box-sizing: border-box;
 }
-.box{
-    display: flex;
-    flex-direction: column;
-    width: 350px;
-    height: 450px;
-    border: 1px solid black;
-    margin: 10px;
-    align-items: center;
-    /* text-align:justify;  */
-    padding: 10px;
-    border-radius: 15px;
-    background: linear-gradient(to top, rgb(255,45,45) 50%, white 50%);
-    background-size: 100% 200%;
-    transition: all .8s;
+.box {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  height: 450px;
+  border: 1px solid black;
+  margin: 10px;
+  align-items: center;
+  /* text-align:justify;  */
+  padding: 10px;
+  border-radius: 15px;
+  background: linear-gradient(to top, rgb(255, 45, 45) 50%, white 50%);
+  background-size: 100% 200%;
+  transition: all 0.8s;
 }
-.box:hover{
-    background-position: left bottom;
-    color: white;
-    border: none;
-    text-align: center;
-    font-size: 0.9rem;
-    box-shadow: 0 0 20px rgb(255,45,45);
+.box:hover {
+  background-position: left bottom;
+  color: white;
+  border: none;
+  text-align: center;
+  font-size: 0.9rem;
+  box-shadow: 0 0 20px rgb(255, 45, 45);
 }
-.size{
-    font-size: 0.9rem;
-    font-weight: bold;
-    text-align: center;
+.size {
+  font-size: 0.9rem;
+  font-weight: bold;
+  text-align: center;
 }
-.box img{
-    width: 80px;
-    height: 80px;
-    background: white;
-    border-radius: 44px;
-    background-color: white;
+.box img {
+  width: 80px;
+  height: 80px;
+  background: white;
+  border-radius: 44px;
+  background-color: white;
 }
 /* Contact Section */
-#contact{
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    background-color: rgba(0, 0, 0, 0.9);
-    color: white;
-    padding: 20px;
+#contact {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  padding: 20px;
 }
-.form{
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    align-items: center;
-    margin: 20px 0px;
-
+.form {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  align-items: center;
+  margin: 20px 0px;
 }
-.input{
-    padding: 12px;
-    margin: 15px;
-    width: 30%;
-    border: none;
-    outline: none;
-
+.input {
+  padding: 12px;
+  margin: 15px;
+  width: 30%;
+  border: none;
+  outline: none;
 }
-#msg{
-    width: 20%;
-    padding: 10px;
-    margin: 15px;
-    border: none;
-    outline: none;
-
+#msg {
+  width: 20%;
+  padding: 10px;
+  margin: 15px;
+  border: none;
+  outline: none;
 }
-#send{
-    padding: 10px;
-    width: 10%;
-    margin: 40px;
-    border: none;
-    outline: none;
+#send {
+  padding: 10px;
+  width: 10%;
+  margin: 40px;
+  border: none;
+  outline: none;
 }
-#send:hover{
-    cursor: pointer;
-    box-shadow: 0 0 10px white;
-
+#send:hover {
+  cursor: pointer;
+  box-shadow: 0 0 10px white;
 }
